--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "babel": "5.8.x",
     "babel-core": "5.8.x",
     "babel-loader": "5.3.x",
+    "history": "1.8.x",
     "lodash": "3.10.x",
     "react": "0.13.x",
     "react-redux": "1.0.x",
-    "react-router": "^1.0.0-beta3",
+    "react-router": "1.0.0-beta4",
     "redux": "1.0.x",
     "redux-logger": "0.0.x",
     "redux-thunk": "0.1.x",
